2006-03-21 Borut Razem <borut.razem@siol.net>
	* src/cod.cc: fixed bug "[ 1448454 ] usart_test - ERROR: == comparison
	  is not defined for String" by merging "assertions" and "assertions"
	  lists to a single "directive" list

2006-03-20 Scott Dattalo <scott@dattalo.com>
	* regression/breakpoints.asm: Embedded script error was causing
	regression test to fail. 
	* regression/rt.sh: Minor fix to Borut's regression test
	enhancement; the 'tee' command was appending multiple regression
	tests to the same log file. Also, on Athlon 64's, the tee command
	was causing pipe errors for some reason.
	
2006-03-19 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc, gui/gui_src.h, gui/gui_src_asm.cc:
	The preferences window now configures the source browser tabs,
	margins, and font.

2006-03-19 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: added share and lib\gtk-2.0\2.4.0\engines to
	  the package, use share\themes\MS-Windows\gtk-2.0\gtkrc as the
	  default gtkrc
	* gpsim/regression/rt.sh: failure detection

2006-03-15 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src.h, gui/gui_src_asm.cc:
	Added .lst files to the source browser.
	Added the "ColorHolder" class to wrap a GdkColor that can be
	changed and reverted back to its original value.
	The colors for the source browser are now saved.
	Line numbers, addresses, and opcodes in the margin can be
	selectively enabled
	* gui/gui_menu.cc:
	Example code for src browser configuration is now rendered in a
	SourcePage.
	* gui/gui_statusbar.cc, gui/gui_main.cc, gui/gui.h,
	gui/gui_regwin.cc, gui/gui_break.cc, gui/gui_profile.cc: The
	global 'gp' has been renamed gpGuiProcessor.

2006-03-15 Alain Portal <aportal@univ-montp2.fr>
	* src/p12.h: Remove redundant class scoping (causes errors with
	gcc-4.1)
	
2006-03-14 Borut Razem <borut.razem@siol.net>
	* src/dspic/makefile.mingw: added
	* plat/win32/gpsim.nsi: fixed typo

2006-03-13 Scott Dattalo <scott@dattalo.com>